test/compile_errors/err_nested_pattern_binding_escape.w
//! expect-error: undefined variable

error ParseErr =
    Bad(msg: str)

fn parse() -> Result[i32, ParseErr]:
    Err(.Bad("nope"))

fn main:
    let _ = match parse()
        Err(.Bad(msg)) => msg
        _ => "ok"
    print(msg)
